--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,33 @@
-<p>header works!</p>
+<header class="header">
+  <div class="container container_column">
+    <div class="header__top">
+      <div class="header__logo">
+        <a class="logo" href="#">
+        </a>
+      </div>
+      <div class="header__search">
+        <div class="search">
+          <input matInput class="search__input" placeholder="H world" value="show to search">
+          <mat-icon class="search__icon">youtube_searched_for</mat-icon>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="header__nav">
+    <div class="container__nav">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link">Shows</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link">Actors</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link">Articles</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
