--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  height: 100%;
+}
+
+body, input {
+  margin: 0;
+  font-family: 'Architects Daughter', cursive;
+  letter-spacing: 1.2px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
