--- a/src/app/shows/shows.component.scss
+++ b/src/app/shows/shows.component.scss
@@ -1,24 +1,27 @@
 .shows {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-height: 30%;
-  max-width: 100%;
+  outline: none;
+  width: 100%;
+  max-width: 96vw;
   overflow: hidden;
 
   &__item {
     width: 20%;
     height: 100%;
-    min-width: 200px;
+    min-width: 150px;
     min-height: 300px;
-    max-height: 380px;
     display: flex;
     flex-direction: column;
     margin: 0 1%;
   }
 
+  &__img {
+    min-height: 250px;
+    max-height: 250px
+  }
+
   &__name {
     white-space: nowrap;
+    font-size: 14px;
   }
 
   &__info {
@@ -30,4 +33,12 @@
       align-items: center;
     }
   }
+}
+
+.mat-card {
+  padding-bottom: 2%;
+}
+
+.mat-card-title {
+  margin: 0;
 }
