--- a/src/app/shows/shows.component.html
+++ b/src/app/shows/shows.component.html
@@ -1,31 +1,210 @@
-<div class="container">
-  <mat-selection-list class="shows"
-                      [flickity]="{cellAlign: 'left',
+<div class="container container_column">
+  <div class="shows-wrapper">
+    <h3>Trending now</h3>
+    <mat-selection-list class="shows"
+                        [flickity]="{cellAlign: 'left',
                                    freeScroll: true,
                                    wrapAround: true,
-                                   autoplay: true,
-                                   pageDots: false}">
-    <div *ngFor="let show of shows" [flickityChild]
-         class="shows__item">
-      <mat-card>
-        <img mat-card-image src="{{show.image.original}}"
-                            alt="film banner"
-                            class="shows__img"
-        >
+                                   autoPlay: true,
+                                   pageDots: false,
+                                   prevNextButtons: false}">
+      <ng-container *ngIf="shows">
+        <div *ngFor="let show of shows" [flickityChild]
+             class="shows__item">
+          <mat-card>
+            <div class="shows__img-wrap">
+              <img mat-card-image src="{{show.image.medium}}"
+                   alt="show banner"
+                   class="shows__img"
+              >
+            </div>
 
-        <mat-card-title class="shows__name">{{show.name}}</mat-card-title>
+            <mat-card-title class="shows__name">{{show.name}}</mat-card-title>
 
-        <mat-card-content class="shows__info">
+            <mat-card-content class="shows__info">
           <span>
             {{show.language}}
           </span>
-          <span>
+              <span>
             <mat-icon>star_half</mat-icon>{{ show.rating.average}}
           </span>
-        </mat-card-content>
-      </mat-card>
-    </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </ng-container>
 
-  </mat-selection-list>
+
+    </mat-selection-list>
+  </div>
+
+  <div class="shows-wrapper">
+    <h3>Best Rates</h3>
+    <mat-selection-list class="shows"
+                        [flickity]="{cellAlign: 'left',
+                                   freeScroll: true,
+                                   wrapAround: true,
+                                   pageDots: false,
+                                   prevNextButtons: false}">
+      <div *ngFor="let bestRateShow of bestRatesShows" [flickityChild]
+           class="shows__item">
+        <mat-card>
+          <div class="shows__img-wrap">
+            <img mat-card-image src="{{bestRateShow.image.medium}}"
+                 alt="show banner"
+                 class="shows__img"
+            >
+          </div>
+
+          <mat-card-title class="shows__name">{{bestRateShow.name}}</mat-card-title>
+
+          <mat-card-content class="shows__info">
+          <span>
+            {{bestRateShow.language}}
+          </span>
+            <span>
+            <mat-icon>star_half</mat-icon>{{ bestRateShow.rating.average}}
+          </span>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+    </mat-selection-list>
+  </div>
+
+<!--  <div class="shows-wrapper">-->
+<!--    <h3>Comedies</h3>-->
+<!--    <mat-selection-list class="shows"-->
+<!--                        [flickity]="{cellAlign: 'left',-->
+<!--                                   freeScroll: true,-->
+<!--                                   wrapAround: true,-->
+<!--                                   pageDots: false,-->
+<!--                                   prevNextButtons: false}">-->
+<!--      <div *ngFor="let comedy of comedies" [flickityChild]-->
+<!--           class="shows__item">-->
+<!--        <mat-card>-->
+<!--          <div class="shows__img-wrap">-->
+<!--            <img mat-card-image src="{{comedy.image.medium}}"-->
+<!--                 alt="show banner"-->
+<!--                 class="shows__img"-->
+<!--            >-->
+<!--          </div>-->
+
+<!--          <mat-card-title class="shows__name">{{comedy.name}}</mat-card-title>-->
+
+<!--          <mat-card-content class="shows__info">-->
+<!--          <span>-->
+<!--            {{comedy.language}}-->
+<!--          </span>-->
+<!--            <span>-->
+<!--            <mat-icon>star_half</mat-icon>{{ comedy.rating.average}}-->
+<!--          </span>-->
+<!--          </mat-card-content>-->
+<!--        </mat-card>-->
+<!--      </div>-->
+
+<!--    </mat-selection-list>-->
+<!--  </div>-->
+
+<!--  <div class="shows-wrapper">-->
+<!--    <h3>Dramas</h3>-->
+<!--    <mat-selection-list class="shows"-->
+<!--                        [flickity]="{cellAlign: 'left',-->
+<!--                                   freeScroll: true,-->
+<!--                                   wrapAround: true,-->
+<!--                                   pageDots: false,-->
+<!--                                   prevNextButtons: false}">-->
+<!--      <div *ngFor="let drama of dramas" [flickityChild]-->
+<!--           class="shows__item">-->
+<!--        <mat-card>-->
+<!--          <div class="shows__img-wrap">-->
+<!--            <img mat-card-image src="{{drama.image.medium}}"-->
+<!--                 alt="show banner"-->
+<!--                 class="shows__img"-->
+<!--            >-->
+<!--          </div>-->
+
+<!--          <mat-card-title class="shows__name">{{drama.name}}</mat-card-title>-->
+
+<!--          <mat-card-content class="shows__info">-->
+<!--          <span>-->
+<!--            {{drama.language}}-->
+<!--          </span>-->
+<!--            <span>-->
+<!--            <mat-icon>star_half</mat-icon>{{ drama.rating.average}}-->
+<!--          </span>-->
+<!--          </mat-card-content>-->
+<!--        </mat-card>-->
+<!--      </div>-->
+
+<!--    </mat-selection-list>-->
+<!--  </div>-->
+
+<!--  <div class="shows-wrapper">-->
+<!--    <h3>Thrillers</h3>-->
+<!--    <mat-selection-list class="shows"-->
+<!--                        [flickity]="{cellAlign: 'left',-->
+<!--                                   freeScroll: true,-->
+<!--                                   wrapAround: true,-->
+<!--                                   pageDots: false,-->
+<!--                                   prevNextButtons: false}">-->
+<!--      <div *ngFor="let thriller of thrillers" [flickityChild]-->
+<!--           class="shows__item">-->
+<!--        <mat-card>-->
+<!--          <div class="shows__img-wrap">-->
+<!--            <img mat-card-image src="{{thriller.image.medium}}"-->
+<!--                 alt="show banner"-->
+<!--                 class="shows__img"-->
+<!--            >-->
+<!--          </div>-->
+
+<!--          <mat-card-title class="shows__name">{{thriller.name}}</mat-card-title>-->
+
+<!--          <mat-card-content class="shows__info">-->
+<!--          <span>-->
+<!--            {{thriller.language}}-->
+<!--          </span>-->
+<!--            <span>-->
+<!--            <mat-icon>star_half</mat-icon>{{ thriller.rating.average}}-->
+<!--          </span>-->
+<!--          </mat-card-content>-->
+<!--        </mat-card>-->
+<!--      </div>-->
+
+<!--    </mat-selection-list>-->
+<!--  </div>-->
+
+<!--  <div class="shows-wrapper">-->
+<!--    <h3>Action</h3>-->
+<!--    <mat-selection-list class="shows"-->
+<!--                        [flickity]="{cellAlign: 'left',-->
+<!--                                   freeScroll: true,-->
+<!--                                   wrapAround: true,-->
+<!--                                   pageDots: false,-->
+<!--                                   prevNextButtons: false}">-->
+<!--      <div *ngFor="let action of actions" [flickityChild]-->
+<!--           class="shows__item">-->
+<!--        <mat-card>-->
+<!--          <div class="shows__img-wrap">-->
+<!--            <img mat-card-image src="{{action.image.medium}}"-->
+<!--                 alt="show banner"-->
+<!--                 class="shows__img"-->
+<!--            >-->
+<!--          </div>-->
+
+<!--          <mat-card-title class="shows__name">{{action.name}}</mat-card-title>-->
+
+<!--          <mat-card-content class="shows__info">-->
+<!--          <span>-->
+<!--            {{action.language}}-->
+<!--          </span>-->
+<!--            <span>-->
+<!--            <mat-icon>star_half</mat-icon>{{ action.rating.average}}-->
+<!--          </span>-->
+<!--          </mat-card-content>-->
+<!--        </mat-card>-->
+<!--      </div>-->
+
+<!--    </mat-selection-list>-->
+<!--  </div>-->
 </div>
 
