--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,10 +2,11 @@
 
 .footer {
   background-color: $green;
-  padding: 10px;
-  position: fixed;
+  padding: 10px 0;
+  position: absolute;
   bottom: 0;
   width: 100%;
+  height: 70px;
 
   &__socials {
     display: flex;
