--- a/src/app/shows/shows.component.scss
+++ b/src/app/shows/shows.component.scss
@@ -1,3 +1,12 @@
+.shows-wrapper {
+  width: 100%;
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 100px;
+  }
+}
+
 .shows {
   outline: none;
   width: 100%;
@@ -5,18 +14,26 @@
   overflow: hidden;
 
   &__item {
-    width: 20%;
+    width: 15%;
     height: 100%;
     min-width: 150px;
-    min-height: 300px;
+    min-height: 310px;
     display: flex;
     flex-direction: column;
     margin: 0 1%;
   }
 
-  &__img {
+  &__img-wrap {
     min-height: 250px;
-    max-height: 250px
+    max-height: 250px;
+    display: flex;
+    background-size: cover;
+  }
+
+  &__img {
+    min-height: 100%;
+    max-height: 100%;
+    background-position: center;
   }
 
   &__name {
@@ -42,3 +59,4 @@
 .mat-card-title {
   margin: 0;
 }
+
