--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
       </div>
       <div class="header__search">
         <div class="search">
-          <input matInput class="search__input" placeholder="H world" value="show to search"
+          <input matInput class="search__input" placeholder="H world" value="search"
                  (keydown.enter)="searchTerm$.next($event.target.value)"
           >
-          <a routerLink="/found-shows">
+          <a href="#" (click)="searchTerm$.next()">
             <mat-icon class="search__icon">youtube_searched_for</mat-icon>
           </a>
         </div>
