recently seen in process

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,13 +22,13 @@
       <nav class="nav">
         <ul class="nav__list">
           <li class="nav__item">
-            <a class="nav__link">Shows</a>
+            <a class="nav__link" routerLink="/">Shows</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link">Actors</a>
+            <a class="nav__link" routerLink="/shedule">Shedule</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link">Articles</a>
+            <a class="nav__link" routerLink="/">Articles</a>
           </li>
         </ul>
       </nav>
