--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -24,6 +24,11 @@
     justify-content: center;
     padding: 10px;
   }
+
+  a {
+    color: $black;
+    text-decoration: none;
+  }
 }
 
 .logo {
