--- a/src/app/shows/shows.component.scss
+++ b/src/app/shows/shows.component.scss
@@ -16,8 +16,8 @@
   &__item {
     width: 15%;
     height: 100%;
-    min-width: 150px;
-    min-height: 310px;
+    min-width: 170px;
+    min-height: 315px;
     display: flex;
     flex-direction: column;
     margin: 0 1%;
@@ -38,12 +38,15 @@
 
   &__name {
     white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
     font-size: 14px;
   }
 
   &__info {
-    display: flex;
+    display: flex !important;
     justify-content: space-between;
+    align-items: center;
 
     span {
       display: flex;
@@ -60,3 +63,12 @@
   margin: 0;
 }
 
+.shows_seen {
+  .shows__item.notseen {
+    display: none;
+  }
+
+  .shows__item.seen {
+    display: flex;
+  }
+}
