--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,9 +10,9 @@
           <input matInput class="search__input" placeholder="H world" value="search"
                  (keydown.enter)="searchShow($event.target.value)"
           >
-          <a href="#">
-            <mat-icon class="search__icon">youtube_searched_for</mat-icon>
-          </a>
+<!--          <a href="#">-->
+<!--            <mat-icon class="search__icon">youtube_searched_for</mat-icon>-->
+<!--          </a>-->
         </div>
       </div>
     </div>
