--- a/src/app/components/shedule/shedule.component.html
+++ b/src/app/components/shedule/shedule.component.html
@@ -1,14 +1,8 @@
 <div class="container container_column">
   <div class="shows-wrapper">
-    <mat-selection-list class="shows"
-                        [flickity]="{cellAlign: 'left',
-                                   freeScroll: true,
-                                   wrapAround: true,
-                                   autoPlay: true,
-                                   pageDots: false,
-                                   prevNextButtons: false}">
+    <mat-selection-list class="shows">
       <ng-container *ngIf="sheduledShows">
-        <div *ngFor="let show of sheduledShows" [flickityChild]
+        <div *ngFor="let show of sheduledShows"
              class="shows__item">
           <a href="#">
             <mat-card>
