done with comments

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,9 +10,6 @@
           <input matInput class="search__input" placeholder="H world" value="search"
                  (keydown.enter)="searchShow($event.target.value)"
           >
-<!--          <a href="#">-->
-<!--            <mat-icon class="search__icon">youtube_searched_for</mat-icon>-->
-<!--          </a>-->
         </div>
       </div>
     </div>
@@ -28,7 +25,7 @@
             <a class="nav__link" routerLink="/shedule">Shedule</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link" routerLink="/">Articles</a>
+            <a class="nav__link" routerLink="/articles">Articles</a>
           </li>
         </ul>
       </nav>
