--- a/src/app/components/shedule/shedule.component.html
+++ b/src/app/components/shedule/shedule.component.html
@@ -1,8 +1,8 @@
 <div class="container container_column">
   <div class="shows-wrapper">
     <mat-selection-list class="shows">
-      <ng-container *ngIf="sheduledShows">
-        <div *ngFor="let show of sheduledShows"
+      <ng-container *ngIf="scheduledShows">
+        <div *ngFor="let show of scheduledShows"
              class="shows__item">
           <a href="#">
             <mat-card>
