--- a/src/app/components/shows/shows.component.html
+++ b/src/app/components/shows/shows.component.html
@@ -6,6 +6,7 @@
                                    freeScroll: true,
                                    wrapAround: true,
                                    autoPlay: true,
+                                   pauseAutoPlayOnHover: true,
                                    pageDots: false,
                                    prevNextButtons: false}">
       <ng-container *ngIf="shows">
