--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,7 +6,7 @@
 
   &__top {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
     width: 100%;
@@ -45,22 +45,18 @@
 .search {
   min-width: 250px;
   max-width: 350px;
-  border-top-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-  background-color: $white;
   display: flex;
   align-items: center;
-  width: 100%;
   cursor: pointer;
 
   &__input {
-    width: 90%;
     outline: none;
     border: none;
+    border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     padding: 8px;
     font-size: 15px;
-    background-color: #ebf6f7;
+    background-color: $mint;
   }
 
   &__icon {
