--- a/src/app/components/show-info/show-info.component.scss
+++ b/src/app/components/show-info/show-info.component.scss
@@ -1,5 +1,49 @@
 @import "../../../variables";
 
+.shows {
+
+  &__item {
+    width: 15%;
+    height: 100%;
+    min-width: 170px;
+    min-height: 315px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 1%;
+  }
+
+  &__img-wrap {
+    min-height: 250px;
+    max-height: 250px;
+    display: flex;
+    background-size: cover;
+  }
+
+  &__img {
+    min-height: 100%;
+    max-height: 100%;
+    background-position: center;
+  }
+
+  &__name {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font-size: 14px;
+  }
+
+  &__info {
+    display: flex !important;
+    justify-content: space-between;
+    align-items: center;
+
+    span {
+      display: flex;
+      align-items: center;
+    }
+  }
+}
+
 .info {
   padding-top: 30px;
 
