--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,11 +25,12 @@
     min-height: calc(100vh - 70px);
   }
 </style>
-
-<app-loader></app-loader>
-<div class="content">
-  <app-header></app-header>
-  <router-outlet></router-outlet>
+<div>
+  <app-loader></app-loader>
+  <div class="content">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
 
