--- a/src/app/components/show-info/show-info.component.html
+++ b/src/app/components/show-info/show-info.component.html
@@ -24,7 +24,7 @@
       </div>
       <div class="info__text" *ngFor="let show of data">
         <h3>{{ show.name }}</h3>
-        <p>{{ show.summary }}</p>
+        <p>{{ text }}</p>
         <ul class="info__genres">
           <li class="genres__item" *ngFor="let genre of show.genres">
             {{ genre }}
