--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container container_column">
     <div class="header__top">
       <div class="header__logo">
-        <a class="logo" href="#">
+        <a class="logo" routerLink="/">
         </a>
       </div>
       <div class="header__search">
